<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">  
	<!-- Main file and reference for the others.-->
    
    <!-- MISC STRINGS -->
    <string name="app_name">Router Keygen</string>
    <string name="msg_welcome_title">Router Keygen</string>
	<string name="msg_welcome_text">Thank you for trying Router Keygen. If you like this application, please consider buying the Donate version. The link is on the preference menu. Your donation will motivate the authors to improve on this great open-source tool.</string>
	<string name="msg_welcome_text_donate">Thank you for buying the Donate version of Router Keygen. Your donation will motivate the authors to improve on this great open-source tool.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_manual">Manual Input</string>
    <string name="menu_preferences">Preferences</string>
	<string name="share_msg_begin">Keys</string>
	<string name="share_title">Share Keys</string>
	<string name="msg_copied"> was copied to clipboard!</string>
	<string name="msg_scanstarted">Scanning started</string>
	<string name="msg_wifienabling">Enabling Wifi</string>
	<string name="msg_results">Click on one of the keys to copy it.\nThen the Wifi Settings will open where you can test it.</string>
	<string name="manual_mac_separator">:</string>
	
    <!-- BUTTONS STRINGS -->
    <string name="bt_manual_cancel">Cancel</string>
	<string name="bt_manual_calc">Calculate</string>
	<string name="bt_share">Share Keys</string>
	<string name="bt_choose">Open</string>
	<string name="bt_choose_back">Up</string>
	<string name="bt_close">Close</string>
	<string name="bt_ok">Ok</string>
	<string name="bt_yes">Yes</string>
	<string name="bt_no">No</string>
	<string name="bt_pause">Pause</string>
	<string name="bt_save_sd">Save to the SD</string>
	<string name="bt_connect">Auto connect</string>
	<string name="bt_website">Go to Website</string>
	
	<!-- DIALOG STRINGS -->
	<string name="lb_manual">Input your ESSID here:</string>
	<string name="dialog_nativecalc">Calculating Keys</string>
	<string name="dialog_nativecalc_msg">This can take up to 2 minutes. Please wait.</string>
	<string name="dialog_thomson3g">Thomson 3G</string>
	<string name="dialog_thomson3g_msg">Fetching Keys...</string>
	<string name="msg_dicislarge">The dictionary size is 28 MBs. It\'s advisable that you are using a wifi connection.\nAre you sure you want to continue?</string>
	<string name="msg_dl_estimating">Estimating download speed and time left...</string>
	<string name="msg_dl_dlingdic">Downloading dictionary</string>
	<string name="msg_dl_speed">Download speed</string>
    <string name="msg_dl_eta">Estimaded time left</string>
    <string name="msg_dic_updated">Your dictionary is already at the latest version.</string>
    <string name="msg_dic_updated_finished">Your dictionary has been updated to the latest version.</string>
	<string name="msg_wait">Please wait...</string>
	<string name="lb_manual_bssid">MAC address</string>
	<string name="dialog_about_credits">Credits</string>
	<string name="dialog_about_credits_desc">Router Keygen is the result of the invaluable contribution from the  following people/organizations:\n\n
								<b>Rui Araújo</b> - Exobel Team Member\n
								<b>Luís Fonseca</b> - Exobel Team Member\n
								<b>Ângela Igreja</b> for the Portuguese Translation\n
								<b>Simone Guidi</b> for the Italian Translation\n
								<b>Matthijs de Rijk</b> and <b>Van Hove Sven</b> for the Dutch Translation\n
								<b>Jon Uriarte</b> for the Spanish Translation and the WLAN_XX implementation\n
								<b><a href="http://www.gnucitizen.org/">GNUCITIZEN</a></b> for the Thomson algorithm\n
								<b><a href="http://wifiresearchers.wordpress.com/">White Hats Crew</a></b> for the Alice and FASTWEB algorithms\n
								<b>Fred Williams</b> for the Verizon FiOS algorithm\n
								<b>Muris Kurgaš </b> for the Discus algorithm\n
								<b><a href="http://websec.ca/">Pedro Joaquim</a></b> for the Huawei algorithm\n
								<b>chaeo</b> for the SKY V1 algorithm.
								</string>
	<string name="dialog_about_license">License</string>
	<string name="dialog_about_license_desc">This application is under the GPLv3.\n\nYou can read its terms 
									<a href="http://www.gnu.org/licenses/gpl-3.0.html">here</a>.</string>										
	<string name="dialog_paypal_init">Connecting to Paypal...</string>
	<string name="msg_app_updated">The application is already at the latest version.</string>
	<string name="lb_donate">Insert the value of the donation ( in Euros ):</string>
	<string name="donate_title">Donation Value</string>
	<string name="folder_chooser_title">Choose your folder</string>
	<string name="folder_chooser_no_dir">(There are no more directories)</string>
	<string name="update_title">Update Available</string>
	<string name="update_message">There is version <xliff:g id="version">%1$s</xliff:g> available. Go to the website to download the latest version.</string>
	
    <!-- PREFERENCES STRINGS -->
	<string name="pref_hinton_wifion">Activate the Wifi Automatically</string>
	<string name="pref_hintoff_wifion">Do not activate the Wifi Automatically</string>
	<string name="pref_wifion">Auto Wifi On</string>
	<string name="pref_wifioff">Auto Wifi Off</string>
	<string name="pref_folder_select">Folder Select</string>
	<string name="pref_folder_select_des">Select the folder of the dictionary</string>
	<string name="pref_1section">General Options</string>
	<string name="pref_2section">About</string>
	<string name="pref_donate">Donate</string>
	<string name="pref_donate_why">Buy me a coffee if you liked this application</string>
	<string name="pref_about">About Router Keygen</string>
	<string name="pref_about_desc">Router Keygen calculates default passwords for several common routers.\n\n
						<a href="http://code.google.com/p/android-thomson-key-solver/">Project\'s Website</a>\n\nVersion: </string>
	<string name="pref_msg_found">selected.</string>
	<string name="pref_native">Native Calculation</string>
	<string name="pref_hinton_native">Calculating on target if it fails to find the dictionary</string>
	<string name="pref_hintoff_native">Only warns if it fails to find the dictionary</string>
	<string name="pref_download_des">Dictionary needed for Thomson keys</string>
	<string name="pref_download">Download Dictionary</string>
	<string name="pref_thomson3g">Use 3G for Thomson</string>
	<string name="pref_hinton_thomson3g">Fetching keys from Internet</string>
	<string name="pref_hintoff_thomson3g">Using dictionary to generate keys.</string>
    <string name="pref_hinton_manual_mac">Manual input has also a MAC field</string>
    <string name="pref_hintoff_manual_mac">Manual input has only a SSID field</string>
    <string name="pref_thomson_section">Thomson Options</string>
    <string name="pref_manual_mac">MAC manual input</string>
	<string name="pref_update">Check for Updates</string>

	<!-- ERROR MESSAGE STRINGS -->
	<string name="msg_newthomson">That is a new Thomson router which key can not be calculated!</string>
	<string name="msg_unspported">That ESSID is not supported!</string>
	<string name="msg_nowifidetected">No WIFI networks detected!</string>
	<string name="msg_nowifi">Wifi not activated! Please activate Wifi!</string>
	<string name="msg_scanfailed">Scanning failed!</string>
	<string name="msg_wifibroken">Failed to activate Wifi</string>
	<string name="msg_shortessid6">Invalid ESSID! It must have 6 characters.</string>
	<string name="msg_errordict">Error reading the dictionary.</string>
	<string name="msg_errnomatches">No matches were found.</string>
	<string name="msg_shortessid5">Invalid ESSID! It must have 6 characters.</string>
	<string name="msg_nomac">This key cannot be generated without MAC address</string>
	<string name="msg_dlinkerror">Error in the calculation of the D-Link key</string>
	<string name="msg_dictnotfound">Dictionary not found on SDCard.</string>
	<string name="pref_msg_notfound">Dictionary not found on </string>
	<string name="msg_nosdcard">The external storage is not available.</string>
	<string name="msg_nomd5">This phone cannot process a MD5 hash.</string>
	<string name="msg_nosha1">This phone cannot process a SHA1 hash.</string>
	<string name="msg_nosha256">This phone cannot process a SHA256 hash.</string>
	<string name="msg_errpirelli">The MAC address is invalid.</string>
	<string name="msg_errthomson3g">Error connecting with the web service.</string>
	<string name="msg_erralicenotsupported">This Alice series is not yet supported!</string>
	<string name="msg_errversion">Unknown version of the dictionary.</string>
	<string name="msg_startingnativecalc">Error with dictionary. Starting native calculation.</string>
	<string name="msg_rotation_nativecalc">Calculation Cancelled. Please do not rotate your phone while doing the calculation.</string>
	<string name="msg_err_essid_no_match">The calculated SSID does not match the provided one.</string>
	<string name="msg_err_native">Error in the Native Calculation.Please inform the team.</string>
	<string name="msg_nomemoryonsdcard">The external storage has not enough free memory.</string>
	<string name="msg_error">Error</string>
	<string name="pref_msg_err_backup_dic">Error moving the previous Dictionary to a backup</string>
	<string name="pref_msg_err_rename_dic">Error renaming downloaded Dictionary.</string>
	<string name="msg_err_sendto">An error occurred when tried to share the keys.</string>
    <string name="msg_shortessid13">Invalid ESSID! It must have 13 characters.</string>
    <string name="msg_err_unkown">An unknown error has occurred.</string>
    <string name="msg_err_online_too_adv">Online version of the dictionary is too advanced for this program.\nPlease consider updating.</string>
    <string name="err_misbuilt_apk">Your APK was not correctly build. Please remember to build the native part first.</string>
    <string name="msg_err_verizon_ssid">Error processing this SSID.</string>
    <string name="msg_err_saving_key_file">Error while saving file with the keys.</string>
    <string name="msg_saved_key_file">saved to the SD card.</string>
    <string name="pref_msg_no_network">There is no network access.</string>
    <string name="msg_err_webdic_table">Error while processing online keys.</string>
    <string name="msg_err_paypal">Error while connecting to Paypal.</string>
    
    <!-- AUTOCOMPLETE SUPPORT -->
	<string-array name="supported_routers">
        <item>Thomson</item>
        <item>SpeedTouch</item>
        <item>O2Wireless</item>
        <item>Orange-</item>
        <item>INFINITUM</item>
        <item>BigPond</item>
        <item>Otenet</item>
        <item>Bbox-</item>
        <item>DMAX</item>
        <item>privat</item>
        <item>DLink-</item>
        <item>Discus--</item>
        <item>eircom</item>
        <item>FASTWEB-1-</item>
        <item>Alice-</item>
        <item>WLAN_</item>
        <item>WLAN</item>
		<item>JAZZTEL_</item>
		<item>WiFi</item>
		<item>YaCom</item>
        <item>SKY</item>
        <item>TECOM-AH4222-</item>
        <item>TECOM-AH4021-</item>
        <item>InfostradaWiFi-</item>
        <item>TN_private_</item>
        <item>CYTA</item>
    </string-array>
</resources>

