<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" >
	<TextView android:id="@+id/label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:text="@string/lb_manual"
				android:clickable="false"
				/>
    <AutoCompleteTextView android:id="@+id/manual_autotext"
                android:layout_below="@id/label"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
				android:layout_width="fill_parent"
				android:inputType="textFilter"	
				android:singleLine="true"
				android:maxLines="1"
				android:layout_height="wrap_content"
				/>
    <Button android:id="@+id/bt_manual_calc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:layout_below="@id/manual_autotext"
				android:layout_alignParentRight="true" 
                android:layout_marginRight="20dip"
				android:layout_marginLeft="10dip"
				android:text="@string/bt_manual_calc"
				/>
	<Button android:id="@+id/bt_manual_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_toLeftOf="@id/bt_manual_calc"
				android:layout_alignTop="@id/bt_manual_calc"
				android:text="@string/bt_manual_cancel"
				/>
</RelativeLayout>