<?xml version="1.0" encoding="utf-8"?>
<TabHost android:id="@+id/tabhost"
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:padding="5dp">
	        <TabWidget
	            android:id="@android:id/tabs"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	        <FrameLayout
	            android:id="@android:id/tabcontent"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:padding="5dp" >
	            <ScrollView
		            android:id="@+id/text_about_scroll"
	                android:layout_width="fill_parent" 
	                android:layout_height="fill_parent" 
	                xmlns:android="http://schemas.android.com/apk/res/android">
		            <TextView
				        android:id="@+id/text_about"
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent" 
				        android:textSize="17sp"
				   		android:text="@string/pref_about_desc"
						/>
				</ScrollView> 
				<ScrollView
	               	android:id="@+id/about_credits_scroll"
	                android:layout_width="fill_parent" 
	                android:layout_height="fill_parent" 
	                xmlns:android="http://schemas.android.com/apk/res/android">
		            <TextView
		               	android:id="@+id/about_credits"
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent" 
				        android:textSize="17sp"
				   		android:text="@string/dialog_about_credits_desc"
					/>
				</ScrollView> 
				
				<ScrollView
	               	android:id="@+id/about_license_scroll"
	                android:layout_width="fill_parent" 
	                android:layout_height="fill_parent" 
	                xmlns:android="http://schemas.android.com/apk/res/android">
		            <TextView
		               	android:id="@+id/about_license"
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent" 
				        android:textSize="17sp"
				   		android:text="@string/dialog_about_license_desc"
					/>
				</ScrollView> 	
		</FrameLayout>
	    </LinearLayout>
</TabHost>
	